# aws-lambda-rust

./: Cargo.toml  compile.sh  zip.sh
src/: main.rs
