[package]
name = "aws-lambda-rust"
version = "0.1.0"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
edition = "2018"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.2"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
simple-error = "^0.2.0"

[dev-dependencies]